# Intaractive_Graphic_Systems

./: README.md
HelloTriangle/: CMakeLists.txt  main.cpp
HelloTriangle/glad/: glad.c
HelloTriangle/shaderIzi/: shaderIzi.cpp  shaderIzi.h
HelloTriangle/shaders/: fshader2.glsl  vshader.glsl
Shaders/: main.cpp
Shaders/libshader/: Shader.h
Shaders/shaderIzi/: shaderIzi.cpp
Shaders/shaders/: fshader.glsl  vshader.glsl
animation/: CMakeLists.txt  animation_utils.h  create_poject.sh  main.cpp
animation/assimp_mloader/: Mesh.h
animation/glad/: glad.c
animation/shaders/: light.v.glsl  refract.f.glsl  trex.f.glsl  trex.v.glsl
assimp/: main.cpp
assimp/assimp_mloader/: Mesh.cpp  Mesh.h  Model.cpp
assimp/shaders/: light.v.glsl
basic_lightning/: link.sh  main.cpp
basic_lightning/camera/: Camera.h
basic_lightning/libshader/: Shader.h
basic_lightning/shaders/: cube.f.glsl
camera_ogl/: CMakeLists.txt  link.sh  main.cpp
camera_ogl/shaderIzi/: shaderIzi.h
camera_ogl/shaders/: vshader.glsl
color/: link.sh  main.cpp
color/shaders/: vshader.glsl
coordinates/: main.cpp
coordinates/libshader/: Shader.cpp
coordinates/shaders/: vshader.glsl
light_casters/: main.cpp
light_casters/libshader/: Shader.cpp
light_casters/shaders/: cube.f.glsl  cube.v.glsl
material/: main.cpp
material/shaders/: cube.f.glsl  cube.v.glsl
normal_map/: CMakeLists.txt  main.cpp
normal_map/assimp_mloader/: Mesh.h  Model.cpp  Model.h
normal_map/shaders/: cylinder.v.glsl
parallax/: CMakeLists.txt  assets.h  main.cpp
parallax/assimp_mloader/: Mesh.cpp  Model.cpp  Model.h
parallax/camera/: Camera.h
parallax/shaders/: cylinder.f.glsl  cylinder.v.glsl
templateProject/: CMakeLists.txt  main.cpp
templateProject/shaders/: vshader.glsl
tex_map/: main.cpp
tex_map/camera/: Camera.cpp
tex_map/shaders/: cube.f.glsl
transformations/: CMakeLists.txt
transformations/libshader/: Shader.cpp
transformations/shaders/: fshader.glsl  vshader.glsl
transparency/: CMakeLists.txt  copylibimg.sh  main.cpp
transparency/assimp_mloader/: Model.h
transparency/shaders/: cylinder.f.glsl  cylinder.v.glsl  refract.v.glsl  trex.f.glsl  trex.v.glsl
